@@ -5,5 +5,7 @@ include $(TOP)/configs/linux-alpha
 
 CONFIG_NAME = debian-alpha
 
+override LIB_DIR = lib/ev5/cmov
+
 # vim: ft=make
 
