@@ -1,14 +1,8 @@
-# Debian-specific defaults for the default Mesa configuration.
-#
-# Yes, this is somewhat confusing: this is different from debian-common in
-# that debian-common only sets general compilation flags while this file
-# overrides the directories that are actually built by default.
-
-include $(TOP)/configs/debian-common
+# Define Debian-specific defaults.
 
 CONFIG_NAME = debian-default
 
-override SRC_DIRS = mesa glu
+override SRC_DIRS = mesa
 override PROGRAM_DIRS =
 
 override INSTALL_DIR = $(DESTDIR)/usr
