@@ -5,8 +5,7 @@ include $(TOP)/configs/linux-x86
 
 CONFIG_NAME = debian-i386
 
-OPT_FLAGS += -march=i686
-
+override ARCH_FLAGS += -mcpu=i686
 override LIB_DIR = lib/i686/cmov
 
 # vim: ft=make
