@@ -5,8 +5,6 @@ include $(TOP)/configs/linux-osmesa
 
 CONFIG_NAME = debian-osmesa
 
-override SRC_DIRS = mesa
-
 # vim: ft=make
 
 
