@@ -5,5 +5,7 @@ include $(TOP)/configs/linux-ppc
 
 CONFIG_NAME = debian-powerpc
 
+override LIB_DIR = lib/603/cmov
+
 # vim: ft=make
 
