@@ -4,5 +4,7 @@ include $(TOP)/configs/debian-ppc
 
 CONFIG_NAME = debian-ppc64
 
+override LIB_DIR = lib64
+
 # vim: ft=make
 
