@@ -5,5 +5,7 @@ include $(TOP)/configs/linux-sparc
 
 CONFIG_NAME = debian-sparc
 
+override LIB_DIR = lib/ultrasparc/cmov
+
 # vim: ft=make
 
