@@ -1,9 +1,11 @@
-# Configuration for building Mesa on the build architecture.
+# Configuration for building Mesa (swx11 and GLU) on the build architecture.
 
 include $(TOP)/configs/debian-default
 include $(TOP)/configs/linux
 
 CONFIG_NAME = debian
+
+override SRC_DIRS = mesa glu
 
 # vim: ft=make
 
