@@ -27,6 +27,30 @@ Description: A free implementation of the OpenGL API -- runtime
  .
  On Linux, this library is also known as libGL or libGL.so.1.
 
+Package: libgl1-mesa-swx11-i686
+Section: libs
+Priority: extra
+Architecture: i386
+Pre-Depends: libgl1-mesa-swx11
+Description: A free implementation of the OpenGL API -- i686 optimized runtime
+ Mesa is a 3-D graphics library with an API which is very similar to
+ that of OpenGL.  To the extent that Mesa utilizes the OpenGL command
+ syntax or state machine, it is being used with authorization from
+ Silicon Graphics, Inc.  However, the author makes no claim that Mesa
+ is in any way a compatible replacement for OpenGL or associated with
+ Silicon Graphics, Inc.
+ .
+ This library provides a pure software rasteriser; it does not provide
+ a direct rendering-capable library, or one which uses GLX.  For that,
+ please see libgl1-mesa-glx.
+ .
+ On Linux, this library is also known as libGL or libGL.so.1.
+ .
+ This set of libraries is optimized for i686 machines and will only be used if
+ you are running a 2.6 kernel on an i686 class CPU. This includes Pentium Pro,
+ Pentium II/II/IV, Celeron CPU's and similar class CPU's (including clones
+ such as AMD Athlon/Opteron, VIA C3 Nehemiah, but not VIA C3 Ezla).
+
 Package: libgl1-mesa-swx11-dev
 Section: libdevel
 Architecture: any
@@ -47,19 +71,6 @@ Description: A free implementation of the OpenGL API -- development support file
  This library provides a pure software rasteriser; it does not provide
  a direct rendering-capable library, or one which uses GLX.  For that,
  please see libgl1-mesa-dev.
-
-Package: libgl1-mesa-swx11-dbg
-Section: libs
-Architecture: any
-Depends: ${shlibs:Depends}
-Conflicts: libgl1-mesa-swrast-dbg
-Replaces: libgl1-mesa-swrast-dbg
-Provides: libgl1-mesa-swrast-dbg
-Description: A free implementation of the OpenGL API -- debugging package
- This package provides a debug-enabled version of the Mesa libraries.
- .
- For a complete description of Mesa, please look at the libgl1-mesa-swx11
- package.
 
 Package: libgl1-mesa-glx
 Section: libs
