@@ -1,0 +1,2 @@
+usr/lib/i686/cmov/libGL.so.*
+usr/lib/i686/cmov/libOSMesa.*
